# epoch_cpp_old

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/ehm/: ehm.h  result.cpp  result.h
src/core/image/: STBImage.h  image.h
src/core/math/: __old_vertex.h  color.h  math.h  math.types.h  matrix.h  point.h  rectangle.h  tensor.h  triangle.h  vector.h
src/core/math/matrix/: matrix.h  projection.h  rotation.h  scale.h  transform.h  translation.h  view.h
src/core/model/: TOLModel.cpp  TOLModel.h  model.h
src/core/types/: EPArray.h  EPDynamicStorage.h  EPDynamicStorage.tests.cpp  EPFactory.h  EPFactoryMethod.h  EPFunction.h  EPFunctionPack.h  EPList.h  EPList.tests.cpp  EPObj.h  EPProcess.h  EPRef.tests.cpp  EPString.h  EPString.tests.cpp  EPTimedFunction.h  EPTuple.h  EPTuple.tests.cpp  EPVector.h  EPVector.tests.cpp  TypesTestSuite.h  dirty.h  epobject.h  epref.h  epuid.cpp  epuid.h  observable.h  singleton.h  types.tests.cpp  valid.h
src/hal/: CMakeLists.txt  HALFactory.h  HALTestSuite.h  HalFactory.cpp  STBImage.cpp  STBImage.h  attachment.h  buffer.h  command_buffer.h  command_pool.h  framebuffer.h  hal.cpp  hal.h  hal.tests.cpp  image.cpp  image.h  pipeline.h  pool.h  sampler.h  shader.h  swapchain.h  texture.cpp  texture.h  vertex.h
src/hal/shaders/: compile-glsl-spirv.bat  shader.frag  shader.vert
src/hal/vulkan/: VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandBuffers.cpp  VKCommandBuffers.h  VKCommandPool.cpp  VKCommandPool.h  VKDepthAttachment.cpp  VKDepthAttachment.h  VKDescriptorPool.cpp  VKDescriptorPool.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKFramebuffer.cpp  VKFramebuffer.h  VKHAL.cpp  VKHAL.h  VKImage.cpp  VKImage.h  VKImageView.cpp  VKImageView.h  VKModel.cpp  VKModel.h  VKObj.h  VKPipeline.cpp  VKPipeline.h  VKSampler.cpp  VKSampler.h  VKShader.cpp  VKShader.h  VKSwapchain.cpp  VKSwapchain.h  VKTexture.cpp  VKTexture.h  VKUniformBuffer.cpp  VKUniformBuffer.h  VKVertex.h  VKVertexBuffer.cpp  VKVertexBuffer.h  (+5 more)
src/junk/: CMakeLists.txt
src/junk/ProjectEuler/: CMakeLists.txt  ProjectEuler.cpp  ProjectEuler.h  main.cpp
src/junk/helloworld/: CMakeLists.txt  main.cpp  main.h
src/logger/: CMakeLists.txt  eplogger.cpp  eplogger.h
src/sandbox/: CMakeLists.txt  SandboxConsoleProcess.h  SandboxProcess.cpp  SandboxProcess.h  SandboxProcessFactory.cpp  SandboxProcessFactory.h  SandboxTestSuite.h  SandboxWindowProcess.h  sandbox.cpp  sandbox.h  sandbox.tests.cpp
src/sandbox/win64/: Win64Sandbox.cpp  Win64Sandbox.h  Win64Sandbox.tests.cpp  Win64SandboxConsoleProcess.cpp  Win64SandboxConsoleProcess.h  Win64SandboxProcess.cpp  Win64SandboxProcess.h  Win64SandboxWindowProcess.cpp  Win64SandboxWindowProcess.h
src/teaching/: CMakeLists.txt
src/teaching/igm451/: CMakeLists.txt
src/teaching/igm451/memoization/: CMakeLists.txt  main.cpp
src/teaching/igm451/simd/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  EPTest.h  EPTestCase.h  EPTestSuite.cpp  EPTestSuite.h
